kubernetes/apps/production/sites/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sites
  namespace: production
  labels:
    app.kubernetes.io/name: sites
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sites
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
